Closed Bug 648966 Opened 15 years ago Closed 15 years ago

TI+JM: Assertion failure: failed to find call site, at ../methodjit/Retcon.cpp:105

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Unassigned)

References

Details

-- function f(x) { gc(); -x; -null; } f(); -- Asserts at revision 74a8fb1bbec5 with -n -a -m.
Bug in rev 74a8fb1bbec5, when streamlining rejoins during calls into an extra rejoin path, we did not add a call site for the scripted call made in that path. We then couldn't find the callee frame's ncode site if we made a scripted call and recompiled multiple times before the call finished. http://hg.mozilla.org/projects/jaegermonkey/rev/dc855edb9bc5
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.