[INFER] Add call site for scripted call made in call rejoin path, bug 648966.